# slack

./: .gitignore  CHANGELOG.md  LICENSE  README-slack-generic-client.md  README.md  cabal.project  ci.sh  circle.yml  generate.py  slack-hs.cabal  stack.yaml
.circleci/: config.yml
.github/workflows/: ci.yml
app/: Main.hs
app/Network/Slack/CLI/: Options.hs
src/: Main.hs
src/Network/: Slack.hs
src/Network/Slack/: Api.hs  Client.hs  Events.hs  Files.hs  Pagination.hs  Request.hs  Signature.hs  SocketMode.hs  Types.hs  WebAPI.hs  Websocket.hs
src/Network/Slack/Internal/: Client.hs  HTTP.hs
src/Network/Slack/Types/: Event.hs  User.hs
src/generic-client/: Main.hs
test/: ApiSpec.hs  Spec.hs
