cabal-version:      3.0
name:               slack-hs
version:            1.0.0.0
synopsis:           Modern, complete Slack platform client for Haskell
description:
  A small Slack SDK with future-proof Web API dispatch, typed errors,
  cursor pagination, external file uploads, Events API signature verification,
  and Socket Mode support.
homepage:           https://github.com/owainlewis/slack
bug-reports:        https://github.com/owainlewis/slack/issues
license:            MIT
license-file:       LICENSE
author:             Owain Lewis
maintainer:         owain@owainlewis.com
category:           Web
build-type:         Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common warnings
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

library
  import: warnings
  hs-source-dirs: src
  exposed-modules:
    Network.Slack
    Network.Slack.Client
    Network.Slack.Events
    Network.Slack.Files
    Network.Slack.Pagination
    Network.Slack.Signature
    Network.Slack.SocketMode
    Network.Slack.Types
    Network.Slack.WebAPI
  other-modules:
    Network.Slack.Internal.Client
    Network.Slack.Internal.HTTP
  build-depends:
    aeson                 >= 2.1 && < 2.3,
    async                 >= 2.2 && < 2.3,
    base                  >= 4.18 && < 5,
    bytestring            >= 0.11 && < 0.13,
    case-insensitive      >= 1.2 && < 1.3,
    crypton               >= 0.32 && < 1.1,
    http-client           >= 0.7 && < 0.8,
    http-client-tls       >= 0.3 && < 0.4,
    http-types            >= 0.12 && < 0.13,
    memory                >= 0.18 && < 0.19,
    network-uri           >= 2.6 && < 2.7,
    random                >= 1.2 && < 1.4,
    text                  >= 2.0 && < 2.2,
    time                  >= 1.12 && < 1.15,
    unordered-containers  >= 0.2 && < 0.3,
    vector                >= 0.13 && < 0.14,
    websockets            >= 0.13 && < 0.14,
    wuss                  >= 2.0 && < 2.1

executable slack-api
  import: warnings
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    Network.Slack.CLI.Options
  build-depends:
    aeson                 >= 2.1 && < 2.3,
    base                  >= 4.18 && < 5,
    bytestring            >= 0.11 && < 0.13,
    optparse-applicative  >= 0.18 && < 0.20,
    slack-hs,
    text                  >= 2.0 && < 2.2

test-suite slack-hs-test
  import: warnings
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
    app
  main-is: Spec.hs
  other-modules:
    Network.Slack.CLI.Options
  ghc-options: -threaded
  build-depends:
    aeson       >= 2.1 && < 2.3,
    base        >= 4.18 && < 5,
    bytestring  >= 0.11 && < 0.13,
    hspec       >= 2.11 && < 2.12,
    http-client >= 0.7 && < 0.8,
    http-types  >= 0.12 && < 0.13,
    slack-hs,
    optparse-applicative >= 0.18 && < 0.20,
    text        >= 2.0 && < 2.2,
    time        >= 1.12 && < 1.15,
    wai         >= 3.2 && < 3.3,
    warp        >= 3.4 && < 3.5
